# setuppy2pyprojecttoml

./: README.md  pyproject.toml
setuppy2pyprojecttoml/: __init__.py  pyproject.py
